--- a/node_file/package.json
+++ b/node_file/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start":"node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -21,5 +22,10 @@
     "path": "^0.12.7",
     "request": "^2.88.2",
     "serve-static": "^1.14.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "github.com/jung-ki-hun/project_J.git"
   }
+
 }
