--- a/node_file/package.json
+++ b/node_file/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node ./app.js",
+    "start": "node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "request": "^2.88.2",
     "serve-static": "^1.14.1"
@@ -27,5 +28,4 @@
     "type": "git",
     "url": "github.com/jung-ki-hun/project_J.git"
   }
-
 }
