--- a/node_file/package.json
+++ b/node_file/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
     "http": "0.0.1-security",
     "mongodb": "^3.6.3",
