--- a/node_file/package.json
+++ b/node_file/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
