--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ KIHUN_HOME = '192.168.219.102'
 STATE_N_CODE = 0
 STATE_Y_CODE = 1
 PORT =3000
+SLACK_TOKENN ='xoxb-1681676332260-1898489415761-OfwgYkD5gdIL9ubsHzOnB03I'
+SLACK_TOKENNY ='xoxp-1681676332260-1699353741248-1909577642512-8c100ca9d8d06f96951efc3254f32011'
+SLACK_TOKEN ='xoxb-1681676332260-1870870823607-cddjEAUK7FvRWEOLjEfZ87De'
