--- a/node_file/package.json
+++ b/node_file/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@slack/events-api": "^3.0.0",
+    "@slack/web-api": "^6.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "discord.js": "^12.5.1",
     "express": "^4.17.1",
     "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
@@ -22,10 +23,12 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.13",
     "mysql": "^2.18.1",
+    "node-schedule": "^2.0.0",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "request": "^2.88.2",
     "serve-static": "^1.14.1",
+    "slack-node": "^0.1.8",
     "winston": "^3.3.3"
   },
   "repository": {
